--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,27 @@
 # Site settings
-title: BY Blog
-SEOTitle: 柏荧的博客 | BY Blog
+title: Frewen Blog
+SEOTitle: 子旺的博客 | Frewen Blog
 header-img: img/post-bg-desk.jpg
-email: qiubaiying@gmail.com
-description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
-url: "http://qiubaiying.github.io"          # your host, for absolute URL
+email: 2622860598@qq.com
+description: "Always cherish the heart of Thanksgiving and keep the place of peace."
+keyword: "Frewen, Frewen Blog, 子旺的博客, fuziwang, 付子旺, 前端, JavaScript, vue.js"
+url: "http://fuziwang.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "Always cherish the heart of Thanksgiving and keep the place of peace."
+sidebar-avatar: /img/about-Frewen-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     qiubaiying
-github_username:    qiubaiying
-facebook_username:  baiying.qiu.7
+zhihu_username:     Frewen
+github_username:    fuziwang
+facebook_username:  fuziwang
 jianshu_username:   e71990ada2fd
 #twitter_username:   qiubaiying
 
